<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/editprofileContainer"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/editprofileImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/circlered"
            android:src="@drawable/camera_icon"
            android:tint="@color/aliceblue" />



        <android.support.v7.widget.AppCompatEditText
            style="@style/textstyle"
            app:backgroundTint="@color/atomic"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:id="@+id/editname"
            android:drawablePadding="20dp"
            android:inputType="text"
            android:drawableLeft="@drawable/userico"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/name_input" />


        <android.support.v7.widget.AppCompatEditText
            style="@style/textstyle"
            app:backgroundTint="@color/atomic"
            android:padding="10dp"

            android:inputType="number"
            android:id="@+id/editAge"
            android:drawableLeft="@drawable/age"
            android:layout_width="match_parent"
            android:drawablePadding="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/age_input" />

        <android.support.v7.widget.AppCompatEditText
            style="@style/textstyle"
            android:layout_width="match_parent"
            android:drawablePadding="20dp"
            app:backgroundTint="@color/atomic"
            android:inputType="number"
            android:id="@+id/editphone"
            android:drawableLeft="@drawable/phoneico"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_input" />

        <android.support.v7.widget.AppCompatEditText
            style="@style/textstyle"
            android:layout_width="match_parent"
            app:backgroundTint="@color/atomic"
            android:id="@+id/editaadhar"
            android:inputType="number"
            android:drawableLeft="@drawable/aadharico"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="20dp"
            android:text="@string/aadhar_input" />


        <android.support.v7.widget.AppCompatEditText
            style="@style/textstyle"
            android:inputType="text"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/address"
            android:id="@+id/editaddress"
            app:backgroundTint="@color/atomic"
            android:padding="10dp"
            android:layout_marginBottom="30dp"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/address_input" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_height="wrap_content">

            <Button
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/save"
                style="@style/buttonstyle"
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:background="@drawable/box"
                android:layout_height="wrap_content" />

            <Button
                android:layout_weight="1"
                style="@style/buttonstyle"
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:background="@drawable/box"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>